[SR-936] fix

[SR-936] use array for ObjCClassTable. added NSCharacterSet hash test. possible fix for SR-936.

[SR-936] renamed method for types initialization. switched to use __CFBridgeClassCollectionSize constant

[SR-936] refactor